--- a/references.bib
+++ b/references.bib
@@ -29,3 +29,9 @@
     author = {{Georgia State University}},
     url = "http://hyperphysics.phy-astr.gsu.edu/hbase/Sound/intens.html#c3"
 }
+
+@misc{huygens-principle,
+title="Huygen's Princple",
+author = {{Georgia State University}},
+url = "http://hyperphysics.phy-astr.gsu.edu/hbase/phyopt/huygen.html"
+}
